# ros_ddd

./: .gitignore  .gitmodules  README.md  deps_rtabmap.rosinstall
rviz/: basic.rviz  rtabmap_kitti.rviz
src/data_to_rosbag/: CMakeLists.txt  package.xml
src/data_to_rosbag/include/data_to_rosbag/: kitti_parser.h  kittiraw_common.h  kittiraw_parser.h  kittiraw_ros_conversions.h
src/data_to_rosbag/src/: kitti_live_node.cpp  kitti_parser.cpp  kitti_rosbag_converter.cpp  kitti_to_png.cpp  kittiraw_common.cpp  kittiraw_live_node.cpp  kittiraw_parser.cpp  kittiraw_ros_conversions.cpp  kittiraw_rosbag_converter.cpp  pcd_to_png.cpp
src/kitti_to_rosbag/: CMakeLists.txt
src/kitti_to_rosbag/include/kitti_to_rosbag/: kittitoros_parser.h
src/kitti_to_rosbag/src/: kittitoros_live_node.cpp  kittitoros_parser.cpp
src/rtabmap_ros_melodic_0.19.3-1/: CMakeLists.txt
src/rtabmap_ros_melodic_0.19.3-1/include/rtabmap_ros/: CoreWrapper.h
src/rtabmap_ros_melodic_0.19.3-1/launch/: rgbd_mapping.launch  rtabmap.launch
src/rtabmap_ros_melodic_0.19.3-1/launch/tests/: rgbdslam_datasets.launch
src/rtabmap_ros_melodic_0.19.3-1/src/: CoreWrapper.cpp
src/rtabmap_ros_melodic_0.19.3-1/srv/: GetTrajectory.srv
src/terreslam/: CMakeLists.txt  README.md  config.yaml  nodelet_plugins.xml  package.xml
src/terreslam/config/: backend.yaml  frontend.yaml  general.yaml  global_general.yaml
src/terreslam/include/terreslam/: aClass_example.h  camera_model.h  frontend.h  io_disk.h  nodelet.h  parameters_standalone.h  plane_detector.h  util_algebra.h  visualizer.h
src/terreslam/include/terreslam/comms/: kitti_parser.h  kittiraw_common.h  kittiraw_ros_conversions.h
src/terreslam/include/terreslam/features/: blob_detector.h  dd_keypoint_detector.h  ddd_keypoint_detector.h  keypoint_detector.h  plane_detector.h  sunq_plane_extraction.h  ulysses_plane_extraction.h
src/terreslam/include/terreslam/processings/: blob_processor.h  dd_keypoint_processor.h  ddd_keypoint_processor.h  keypoint_processor.h  plane_processor.h
src/terreslam/include/terreslam/registrations/: dd_coarse_alignment.h  ddd_coarse_alignment.h
src/terreslam/include/terreslam/types/: sunq_types.h  ulysses_map.h
src/terreslam/include/terreslam/utils/: sunq_map.h  sunq_types.h  ulysses_map.h  ulysses_types.h  util_algebra.h  util_chrono.h  util_general.h  util_map.h  util_msg.h  util_pcd.h  util_types.h
src/terreslam/launch/: rgbd_slam.launch
src/terreslam/msg/: BlobMatches.msg  BlobPoints.msg  KeyPointMatches.msg
src/terreslam/src/: aClass_example.cpp  camera_model.cpp  frontend.cpp  io_disk.cpp  nodelet.cpp  parameters_standalone.cpp  plane_detector.cpp  util_algebra.cpp  visualizer.cpp
src/terreslam/src/comms/: kitti_parser.cpp  kittiraw_common.cpp  kittiraw_ros_conversions.cpp  util_msg.cpp
src/terreslam/src/features/: blob_detector.cpp  dd_keypoint_detector.cpp  ddd_keypoint_detector.cpp  keypoint_detector.cpp  plane_detector.cpp  sunq_plane_extraction.cpp  ulysses_plane_extraction.cpp
src/terreslam/src/nodelets/: blob_detector_frontend.cpp  blob_detector_nodelet.cpp  dd_keypoint_frontend.cpp  dd_keypoint_nodelet.cpp  ddd_keypoint_frontend.cpp  ddd_keypoint_nodelet.cpp  lc_corrector_nodelet.cpp  metric_alignment_frontend.cpp  metric_alignment_nodelet.cpp  plane_detector_frontend.cpp  plane_detector_nodelet.cpp  rgb_cloud_frontend copy.cpp  rgb_depth_frontend.cpp  rgb_depth_nodelet.cpp  z_metric_alignment_frontend.cpp  z_rgb_cloud_frontend copy.cpp  z_rgb_depth_frontend.cpp
src/terreslam/src/nodelets/executables/: blob_detector_nodelet.cpp  dd_keypoint_nodelet.cpp  ddd_keypoint_nodelet.cpp  lc_corrector_nodelet.cpp  metric_alignment_nodelet.cpp  plane_detector_nodelet.cpp  rgb_depth_nodelet.cpp
src/terreslam/src/processings/: blob_processor.cpp  dd_keypoint_processor.cpp  ddd_keypoint_processor.cpp  keypoint_processor.cpp  plane_processor.cpp
src/terreslam/src/registrations/: dd_coarse_alignment.cpp  ddd_coarse_alignment.cpp
src/terreslam/src/types/: sunq_map.cpp  ulysses_map.cpp  ulysses_types.cpp
src/terreslam/src/utils/: sunq_map.cpp  sunq_types.cpp  ulysses_map.cpp  ulysses_types.cpp  util_algebra.cpp  util_chrono.cpp  util_general.cpp  util_map.cpp  util_msg.cpp  util_pcd.cpp  util_types.cpp
