<?xml version="1.0"?>
<package format="2">
  <name>data_to_rosbag</name>
  <version>0.0.0</version>
  <description>Extension of the kitti_to_ros package (https://github.com/ethz-asl/kitti_to_rosbag) other datasets. It contains a set of tools for parsing datasets into ROS messages and outputting them as ROS bag files (or merged pointclouds).</description>

  <author>Ivan Caminal</author>
  <maintainer email="ivancaminal72@gmail.com">Ivan Caminal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>gflags_catkin</depend>
  <depend>image_transport</depend>
  <depend>minkindr</depend>
  <depend>minkindr_conversions</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>rosbag</depend>
</package>
