<?xml version="1.0"?>
<package format="2">
  <name>terreslam</name>
  <version>0.0.0</version>
  <description>Large-scale SLAM for automotive applications</description>

  <author>Ivan Caminal</author>
  <maintainer email="ivancaminal72@gmail.com">Ivan Caminal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  
  <!-- <build_depend>gflags_catkin</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>rosbag</build_depend> -->

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>minkindr</build_depend>
  <build_depend>minkindr_conversions</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
	<nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
